Use sentence-style caps
To follow the official Material guidelines: https://material.io/archive/guidelines/style/writing.html#writing-capitalization-punctuation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="start_button">Start</string>
     <string name="stop_button">Stop</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="collector_info">UDP Collector: %1$s:%2$d</string>
-    <string name="http_server_status">HTTP Server: http://%1$s:%2$d</string>
+    <string name="collector_info">UDP collector: %1$s:%2$d</string>
+    <string name="http_server_status">HTTP server: http://%1$s:%2$d</string>
     <string name="rcvd_and_sent">%1$s received — %2$s sent</string>
     <string name="query">Query</string>
     <string name="host">Host</string>
@@ -42,7 +42,7 @@
     <string name="status">Status</string>
     <string name="connections_view">Connections</string>
     <string name="no_connections">No connections</string>
-    <string name="connection_details">Connection Details</string>
+    <string name="connection_details">Connection details</string>
     <string name="app">App</string>
     <string name="protocol">Protocol</string>
     <string name="source">Source</string>
@@ -50,43 +50,43 @@
     <string name="bytes">Bytes</string>
     <string name="packets">Packets</string>
     <string name="duration">Duration</string>
-    <string name="http_server">HTTP Server</string>
-    <string name="udp_exporter">UDP Exporter</string>
+    <string name="http_server">HTTP server</string>
+    <string name="udp_exporter">UDP exporter</string>
     <string name="no_dump">None</string>
     <string name="no_dump_info">PCAP will not be dumped</string>
     <string name="http_server_info">Start an HTTP server for the PCAP download</string>
     <string name="udp_exporter_info">Sends the PCAP to a remote UDP receiver</string>
-    <string name="http_server_port">HTTP Server Port</string>
-    <string name="receiver_ip_address">Collector IP Address</string>
-    <string name="receiver_port">Collector Port</string>
-    <string name="dump_mode">Dump Mode</string>
-    <string name="user_guide">User Guide</string>
-    <string name="open_telegram_group">Telegram Group</string>
-    <string name="source_code">Source Code</string>
-    <string name="yes">YES</string>
-    <string name="no">NO</string>
+    <string name="http_server_port">HTTP server port</string>
+    <string name="receiver_ip_address">Collector IP address</string>
+    <string name="receiver_port">Collector port</string>
+    <string name="dump_mode">Dump mode</string>
+    <string name="user_guide">User guide</string>
+    <string name="open_telegram_group">Telegram group</string>
+    <string name="source_code">Source code</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="existing_vpn_confirm">The currently active VPN app will be disconnected. Do you want to proceed?</string>
     <string name="vpn_setup_failed">VPN setup failed</string>
     <string name="app_not_found">App "%1$s" not found</string>
     <string name="apps_loading_please_wait">Apps loading in progress, please wait</string>
     <string name="stats">Stats</string>
-    <string name="active_connections">Active Connections</string>
-    <string name="dropped_connections">Dropped Connections</string>
-    <string name="tot_connections">Total Connections</string>
-    <string name="open_sockets">Open Sockets</string>
+    <string name="active_connections">Active connections</string>
+    <string name="dropped_connections">Dropped connections</string>
+    <string name="tot_connections">Total connections</string>
+    <string name="open_sockets">Open sockets</string>
     <string name="max_file_descriptor">Max FD</string>
-    <string name="bytes_sent">Bytes Sent</string>
-    <string name="bytes_rcvd">Bytes Received</string>
-    <string name="packets_sent">Packets Sent</string>
-    <string name="packets_rcvd">Packets Received</string>
-    <string name="dns_queries">DNS Queries</string>
-    <string name="search_apps">Search Apps</string>
+    <string name="bytes_sent">Bytes sent</string>
+    <string name="bytes_rcvd">Bytes received</string>
+    <string name="packets_sent">Packets sent</string>
+    <string name="packets_rcvd">Packets received</string>
+    <string name="dns_queries">DNS queries</string>
+    <string name="search_apps">Search apps</string>
     <string name="no_apps">No apps</string>
-    <string name="dns_server">DNS Server</string>
+    <string name="dns_server">DNS server</string>
     <string name="apps">Apps</string>
-    <string name="navigation_drawer_open">Drawer Open</string>
-    <string name="navigation_drawer_close">Drawer Close</string>
-    <string name="pcap_file">PCAP File</string>
+    <string name="navigation_drawer_open">Drawer open</string>
+    <string name="navigation_drawer_close">Drawer close</string>
+    <string name="pcap_file">PCAP file</string>
     <string name="pcap_file_info">Create a PCAP file into the device storage</string>
     <string name="cannot_write_file">Cannot write file</string>
     <string name="share">Share</string>
@@ -99,8 +99,8 @@
     <string name="no_app_filter">Target app is not selected</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Open</string>
-    <string name="first_seen">First Seen</string>
-    <string name="last_seen">Last Seen</string>
+    <string name="first_seen">First seen</string>
+    <string name="last_seen">Last seen</string>
     <string name="conn_status_closed">Closed</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copied_to_clipboard">Copied to clipboard!</string>
@@ -117,7 +117,7 @@
     <string name="error">Error</string>
     <string name="conn_status_unreachable">Unreachable</string>
     <string name="other_prefs">Other</string>
-    <string name="app_language">App Language</string>
+    <string name="app_language">App language</string>
     <string name="lang_english">English</string>
     <string name="system_default">System default</string>
     <string name="no_activity_file_selection">No app found to handle file selection</string>
@@ -125,68 +125,68 @@
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
     <string name="app_theme">Theme</string>
-    <string name="enable_socks5_proxy">Enable SOCKS5 Proxy</string>
+    <string name="enable_socks5_proxy">Enable SOCKS5 proxy</string>
     <string name="enable_socks5_proxy_summary">When enabled, all the TCP connections will be redirected to the specified SOCKS5 proxy.</string>
     <string name="proxy">Proxy</string>
-    <string name="proxy_ip_address">Proxy IP Address</string>
-    <string name="proxy_port">Proxy Port</string>
-    <string name="root_capture">Capture as Root</string>
+    <string name="proxy_ip_address">Proxy IP address</string>
+    <string name="proxy_port">Proxy port</string>
+    <string name="root_capture">Capture as root</string>
     <string name="root_capture_summary">Capturing packets as root allows PCAPdroid to run with other VPN apps.</string>
     <string name="donate">Donate</string>
-    <string name="root_log">Root Log</string>
-    <string name="request_plaintext">Request Plaintext</string>
+    <string name="root_log">Root log</string>
+    <string name="request_plaintext">Request plaintext</string>
     <string name="search">Search…</string>
     <string name="app_val">App: %1$s</string>
-    <string name="ip_address_val">IP Address: %1$s</string>
+    <string name="ip_address_val">IP address: %1$s</string>
     <string name="host_val">Host: %1$s</string>
     <string name="protocol_val">Protocol: %1$s</string>
     <string name="whitelist_action">Whitelist…</string>
     <string name="hide">Hide…</string>
     <string name="n_selected">%1$d selected</string>
     <string name="select_all">Select all</string>
-    <string name="app_details">App Details</string>
-    <string name="package_name">Package Name</string>
+    <string name="app_details">App details</string>
+    <string name="package_name">Package name</string>
     <string name="uid">UID</string>
     <string name="app_name">Name</string>
     <string name="version">Version</string>
     <string name="target_sdk">Target SDK</string>
     <string name="installed_on">Installed on</string>
-    <string name="last_update">Last Update</string>
+    <string name="last_update">Last update</string>
     <string name="permissions">Permissions</string>
     <string name="root_app_info">System daemons running with maximum privileges.</string>
     <string name="netd_app_info">The system daemon which performs the DNS resolutions.</string>
     <string name="android_app_info">The Android system.</string>
     <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined.</string>
-    <string name="packets_dropped">Packets Dropped</string>
+    <string name="packets_dropped">Packets dropped</string>
     <string name="capture_prefs">Capture</string>
-    <string name="pcapdroid_trailer">PCAPdroid Trailer</string>
+    <string name="pcapdroid_trailer">PCAPdroid trailer</string>
     <string name="pcapdroid_trailer_summary">A trailer containing additional metadata, such as the app name, will be added to the dumped packets.</string>
     <string name="trailer_how_to">How to display the trailer data in Wireshark</string>
-    <string name="remove_ads">Remove Ads</string>
+    <string name="remove_ads">Remove ads</string>
     <string name="pending_transaction">Please complete your transaction to redeem this feature</string>
     <string name="purchased_feature_ok">The purchased feature is now available!</string>
     <string name="ctrl_consent">An app wants to capture your device traffic.\nDeny it if you are not sure!</string>
     <string name="deny">Deny</string>
     <string name="allow">Allow</string>
-    <string name="ctrl_consent_title">PCAPdroid Control Request</string>
+    <string name="ctrl_consent_title">PCAPdroid control request</string>
     <string name="ctrl_consent_denied">PCAPdroid: the control request was denied</string>
     <string name="ctrl_consent_allowed">PCAPdroid: the control request was allowed</string>
-    <string name="capture_interface">Capture Interface</string>
+    <string name="capture_interface">Capture interface</string>
     <string name="internet">Internet</string>
-    <string name="all_interfaces">All Interfaces</string>
+    <string name="all_interfaces">All interfaces</string>
     <string name="capturing_from">Capturing packets from \"%1$s\"</string>
-    <string name="edit_filter">Edit Filter</string>
-    <string name="edit_list">Edit List</string>
-    <string name="hidden_connections_rules">Hidden Connections Rules</string>
+    <string name="edit_filter">Edit filter</string>
+    <string name="edit_list">Edit list</string>
+    <string name="hidden_connections_rules">Hidden connections rules</string>
     <string name="list_is_empty">List is empty</string>
     <string name="malicious_connection_app">Malicious connection detected (%1$s)</string>
     <string name="show_only_malicious">Malicious connections</string>
     <string name="security">Security</string>
-    <string name="malware_detection">Malware Detection</string>
+    <string name="malware_detection">Malware detection</string>
     <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists.</string>
     <string name="reset">Reset</string>
-    <string name="malware_whitelist">Malware Whitelist</string>
-    <string name="malware_whitelist_rules">Malware Whitelist Rules</string>
+    <string name="malware_whitelist">Malware whitelist</string>
+    <string name="malware_whitelist_rules">Malware whitelist rules</string>
     <string name="feature_not_available">This feature is currently unavailable for your device</string>
     <string name="billing_connecting">The connection to Google Play is in progress, please retry in a while</string>
     <string name="malware_whitelist_help">This user-defined whitelist is used to inhibit malware detection. Connections matching any of these rules will not be marked as malware. You can create rules by long pressing a malicious connection.</string>
@@ -204,14 +204,14 @@
     <string name="hint">Hint</string>
     <string name="once">Once</string>
     <string name="forever">Forever</string>
-    <string name="control_permissions">Control Permissions</string>
+    <string name="control_permissions">Control permissions</string>
     <string name="control_permissions_summary">Check which apps are allowed to control the PCAPdroid capture.</string>
     <string name="control_permissions_item">%1$s: %2$s</string>
     <string name="country">Country</string>
     <string name="asn">ASN</string>
     <string name="country_val">Country: %1$s</string>
-    <string name="send_report">Send Report</string>
-    <string name="start_at_boot">Start at Boot</string>
+    <string name="send_report">Send report</string>
+    <string name="start_at_boot">Start at boot</string>
     <string name="start_at_boot_summary">If enabled, the capture will start automatically when the device boots.</string>
     <string name="malware_status_ok">No malicious traffic detected</string>
     <string name="malware_status_detected">Malicious connections detected</string>
@@ -240,14 +240,14 @@
     <string name="decryption_no_filter_warn">When performing TLS decryption you should select a target app to avoid breaking Internet connectivity</string>
     <string name="block">Block…</string>
     <string name="firewall">Firewall</string>
-    <string name="firewall_rules">Firewall Rules</string>
+    <string name="firewall_rules">Firewall rules</string>
     <string name="firewall_help">This list contains rules to block connections</string>
     <string name="blocked_pkts">Blocked</string>
     <string name="n_pkts">%1$s pkts</string>
     <string name="show_only_blocked">Blocked by firewall</string>
     <string name="blocked_connection_filter">blocked</string>
-    <string name="paid_features">Paid Features</string>
-    <string name="unlock_code">Unlock Code</string>
+    <string name="paid_features">Paid features</string>
+    <string name="unlock_code">Unlock code</string>
     <string name="validate">Validate</string>
     <string name="valid">Valid</string>
     <string name="invalid">Invalid</string>
